# motivation-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: publish.yml
src/: lib.rs
