[package]
name = "motivation-rs"
description = "A collection of motivating messages."
version = "0.1.0"
authors = ["Sergei Popinevskii <sergei@yggdr.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yggdr-corp/motivation-rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
